Reengineered passport.js, controllers, database.js, middleware, routes, seed.js, server.js, and swagger.json
